--- a/Application/src/RazorPagesTestSample/Pages/Index.cshtml
+++ b/Application/src/RazorPagesTestSample/Pages/Index.cshtml
@@ -12,7 +12,7 @@
         <form method="post">
             <div class="panel panel-default">
                 <div class="panel-heading">
-                    <h3 class="panel-title">Add a message for the best app</h3>
+                    <h3 class="panel-title">Add a message for the best app from MR</h3>
                 </div>
                 <div class="panel-body">
                     <div class="form-group">
